# advent2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
advent/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
