[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["Andrew McLoud <amcloud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

